--- a/app/ForecastWeather/ForecastWeather.m.css
+++ b/app/ForecastWeather/ForecastWeather.m.css
@@ -2,6 +2,20 @@
   display: flex;
 }
 
-.forecastContainer > * {
+/* The weird attribute selector on class is in order to reference a plain
+ * non-module classname on a child element */
+.forecastContainer > [class*="card"] {
   margin-right: 1rem;
+}
+
+
+@media screen and (max-width: 767px) {
+  .forecastContainer {
+    flex-direction: column;
+  }
+
+  .forecastContainer > [class*="card"] {
+    margin: 1rem 0;
+    width: auto;
+  }
 }
