--- a/app/css/index.scss
+++ b/app/css/index.scss
@@ -17,3 +17,9 @@ body {
   height: 100%;
   width: 100%;
 }
+
+@media screen and (max-width: 767px) {
+  html {
+    font-size: 8px;
+  }
+}
